--- a/css/main.scss
+++ b/css/main.scss
@@ -858,6 +858,7 @@ div.errorMessage {
             font-weight: 700;
             padding: 0.5rem;
             display: flex;
+            border-radius: 1rem;
             flex-direction: row;
             align-items: center;
             align-content: center;
