--- a/views/app.jade
+++ b/views/app.jade
@@ -24,7 +24,7 @@ html(lang="en")
                             span.english= val.translations
                             span.padding
                             span.category
-                                img(class="languageIcon", src="http://dcatcher.me/assets/" + val.language + ".svg")
+                                img(class="languageIcon", src="//dcatcher.me/assets/" + val.language + ".svg")
 
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js")
