--- a/views/login.jade
+++ b/views/login.jade
@@ -11,7 +11,7 @@ html(lang="en")
             div.loginBlock
                 div.formTitle 
                     span Login
-                form(class='loginForm', action='/login', method='post')
+                form(class='loginForm', action='login', method='post')
                     if error
                         div.errorMessage= error
                     else
