--- a/views/app.jade
+++ b/views/app.jade
@@ -5,7 +5,8 @@ html(lang="en")
         link(rel="stylesheet", href= "/css/main.min.css", type="text/css")
         meta(name="viewport", content="width-device-width, initial-scale=1")
         meta(name="theme-color", content="#188bee")
-        link(rel="stylesheet", href= "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", type="text/css")
+        link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
+        link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body
         include sidebar.jade
         main
@@ -14,20 +15,25 @@ html(lang="en")
                     span.mainTitle 
                         i(class="fa fa-fw fa-home")
                         span= maintitle 
+                        span.subtext= "Welcome back " + u.firstname +"."
             div.content
-                h2 The last 10 words you added:
-                div.allWords
-                    each val in w
-                        div.wordBlock
-                            span.lang= val.word
-                            span.padding
-                            span.english= val.translations
-                            span.padding
-                            span.category
-                                img(class="languageIcon", src="//dcatcher.me/assets/" + val.language + ".svg")
+                if (w.length != 0)
+                    h2 The last 10 words you added:
+                    div.allWords
+                        each val in w
+                            div.wordBlock
+                                span.lang= val.word
+                                span.padding
+                                span.english= val.translations
+                                span.padding
+                                span.category
+                                    img(class="languageIcon", src="//dcatcher.me/assets/" + val.language + ".svg")
+                else
+                    h2 You haven't added any words yet! Why not add some to a category on the left!
+                    img(src="//dcatcher.me/assets/sidebar-arrow.svg").sidebar-arrow
 
-
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/i18n/jquery-ui-i18n.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
         script(src="/js/dropdown.js")
         script(src="/js/sidebar.js")
+        script(src="/js/comma.js")
