--- a/views/catquiz.jade
+++ b/views/catquiz.jade
@@ -12,22 +12,17 @@ html(lang="en")
         main
             div.topBar
                 div.top
-                    span.mainTitle 
-                        i(class="fa fa-fw fa-plus")
-                        span= maintitle 
+                    span.mainTitle
+                        i Q
+                        span Quiz
+                        span.padding
+                        span.num-badge= words.length
             div.content
-                //- h1= message
-                form(action="/phrasebook/app/words/new", method="post").appForm
-                    label(for="word") Word
-                    input(type="text", name="word" required autofocus)
-                    input(type="hidden", value= categoryID, name="categoryID")
-                    input(type="hidden", value= categoryName, name="categoryName")
-                    label(for="translations") Translation(s) - Separated by commas.
-                    input(type="text", name="translations" required)
-                    input(type="submit", value="Add new word").bgPrimary
+                
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
         script(src="/js/dropdown.js")
         script(src="/js/search.js")
+        script(src="/js/comma.js")
         script(src="/js/sidebar.js")
