--- a/views/login.jade
+++ b/views/login.jade
@@ -4,30 +4,66 @@ html(lang="en")
         title= title
         meta(name="viewport", content="width-device-width, initial-scale=1")
         link(rel="stylesheet", href= "/css/main.min.css", type="text/css")
-        link(rel="stylesheet", href= "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", type="text/css")
+        link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
+        link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body.loginPage
+        div.overlay
+            i(class="fa fa-spinner fa-pulse fa-3x fa-fw loading-icon")
+        div.userOverlay
+            img.userIcon
+            h2 Welcome!
         // include sidebar.jade
-        main
+        main.noSidebar
             div.loginBlock
                 div.formTitle 
-                    span Login
-                form(class='loginForm', action='login', method='post')
-                    if error
-                        div.errorMessage= error
-                    else
+                    img(src="https://dcatcher.me/assets/logo-col.svg").logo
+                form.glass-form.login-form
+                    div.errorMessage
                     
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-user fa-fw pad-lr")
-                        span.inp
-                            input(type='text', placeholder='Username', name='username')
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-lock fa-fw pad-lr")
-                        span.inp
-                            input(type='password', placeholder='Password', name='password')
-                    input(type='submit', class='bgBlue', value="SIGN IN")
+                    input(type='text', placeholder='Username', name='username', id="username")
+                    input(type='password', placeholder='Password', name='password', id="password")
+                    input(type='submit', class='glass-btn', value="Login", id="loginButton")
+                    a(href="register", class='glass-btn') 
+                        span Not got an account? Register!
+
             // h2 Hello world!
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/i18n/jquery-ui-i18n.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
         script(src="/js/dropdown.js")
+        script.
+        // Animate the login-form. (TODO: Check if this really is a little... overkill?)
+            $(".login-form").submit(function(event) {
+                $("main").fadeOut("fast", function() {
+                    $(".overlay").css({
+                        display: "flex",
+                        opacity: 0
+                    });
+                    $(".overlay").animate({opacity: 1}, 500);
+                    $.post("login", {username: $("#username").val(), password: $("#password").val()}, function(data, status, jqXHR) {
+                        if (data.type == "success") {
+                            $(".userIcon").attr("src", data.icon)
+                            $(".userOverlay h2").text("Welcome " + data.name + "!");
+                            $(".overlay").fadeOut(function () {
+                                $(".userOverlay").css({
+                                    display: "flex",
+                                    opacity: 0
+                                });
+                                $(".userOverlay").animate({opacity: 1}, 1000);
+                                setTimeout(function(){
+                                    $("body").fadeOut(function() {
+                                        window.location.replace("app");
+                                    });
+                                }, 1000);
+                            });
+                        } else {
+                            // User not logged in!
+                            $(".errorMessage").text("Invalid username or password!");
+                            $(".overlay").fadeOut(1000, function() {
+                                $("main").fadeIn("slow");
+                            });
+                        }
+                    });
+                });
+                event.stopPropagation();
+                return false;
+            });
