--- a/views/register.jade
+++ b/views/register.jade
@@ -4,50 +4,31 @@ html(lang="en")
         title= title
         meta(name="viewport", content="width-device-width, initial-scale=1")
         link(rel="stylesheet", href= "/css/main.min.css", type="text/css")
-        link(rel="stylesheet", href= "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", type="text/css")
+        link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
+        link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body.registerPage
         // include sidebar.jade
-        main
+        main.noSidebar
             div.loginBlock
                 div.formTitle 
-                    span Register
-                form(class='loginForm', action='/register', method='post')
+                    img(src="https://dcatcher.me/assets/logo-col.svg").logo
+                form(class='glass-form', action='register', method='post')
                     if error
                         div.errorMessage= error
                     else
                         
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-user fa-fw pad-lr")
-                        span.input
-                            input(type='text', placeholder='Username', name='username')
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-fw pad-lr") F
-                        span.input
-                            input(type='text', placeholder='Firstname', name='firstname')
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-fw pad-lr") L
-                        span.input
-                            input(type='text', placeholder='Lastname', name='lastname')
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-envelope fa-fw pad-lr")
-                        span.input
-                            input(type='text', placeholder='Email', name='email')
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-lock fa-fw pad-lr")
-                        span.input
-                            input(type='password', placeholder='Password', name='password')
-                    div.formInput
-                        span.icon
-                            i(class="fa fa-lock fa-fw pad-lr")
-                        span.input
-                            input(type='password', placeholder='Confirm Password', name='confirmpassword')
-                    input(type='submit', class='bgGreen', value="REGISTER")
+                    input(type='text', placeholder='Username', name='username', required)
+                    div.form-group
+                        input(type='text', placeholder='Firstname', name='firstname', required)
+                        span(class="padding")
+                        input(type='text', placeholder='Lastname', name='lastname', required)
+                    input(type='email', placeholder='Email', name='email', required)
+                    input(type='password', placeholder='Password', name='password', required)
+                    input(type='password', placeholder='Confirm Password', name='confirmpassword', required)
+                    input(type='submit', class='glass-btn', value="Register")
+                    a(href="login", class='glass-btn') 
+                        span Already got an account? Login!
             // h2 Hello world!
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/i18n/jquery-ui-i18n.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
         script(src="/js/dropdown.js")
